Ajuste en el index del proyecto que tenia problema en la modal al tirar un error, ajuste en tabla pago trabjadores, se añadio nueva fuente para fpdf,

--- a/config/routing.yml
+++ b/config/routing.yml
@@ -771,6 +771,10 @@ pagoTrabajadores_reporte:
     - libs/fpdf/fpdf.php
     - model/base/pagoTrabajadoresBaseTableClass.php
     - model/pagoTrabajadoresTableClass.php
+    - model/base/empleadoBaseTableClass.php
+    - model/empleadoTableClass.php
+    - model/base/tipoPagoBaseTableClass.php
+    - model/tipoPagoTableClass.php
 ##-------------------------- PAGO TRABAJADORES----------------------------##
 
 ##-------------------------- ENTRADA BODEGA-----------------------------##
