--- a/config/view.yml
+++ b/config/view.yml
@@ -6,14 +6,13 @@ all:
     - http-equiv="X-UA-Compatible" content="IE=edge"
   javascript:
     - jquery-1.11.1.min.js
-    - bootstrap.js
+    - bootstrap.min.js
     - main.js
-    - jquery.js
   stylesheet:
     - bootstrap.css
     - main.css
     - font-awesome.min.css
-    - full-width-pics
+    - full-width-pics.css
 shfSecurity:
   index:
     title: Identificación de Usuario
