Implementacion de graficas en el proyecto, creacion direccion en routing, en el view y creacion de index para las graficas.

--- a/config/routing.yml
+++ b/config/routing.yml
@@ -2212,3 +2212,14 @@ panela_deleteFilters:
   param:  { module: panela, action: deleteFilters, format: html }
 
 ##-------------------------- PANELA -------------------------------------##
+##---------------------------GRAFICA-------------------------------------##
+grafica_index:
+  url:    /grafica/index
+  param:  { module: grafica, action: index, format: html }
+  load:
+    - model/base/jugoBaseTableClass.php
+    - model/jugoTableClass.php
+    - model/base/controlCalidadBaseTableClass.php
+    - model/controlCalidadTableClass.php
+
+##---------------------------GRAFICA-------------------------------------##
