--- a/config/routing.yml
+++ b/config/routing.yml
@@ -2077,7 +2077,8 @@ mieles_insert:
     - model/mielesTableClass.php
     - model/base/empleadoBaseTableClass.php
     - model/empleadoTableClass.php
-
+    - model/base/proveedorBaseTableClass.php
+    - model/proveedorTableClass.php
 mieles_view:
   url:    /mieles/ver
   param:  { module: mieles, action: view, format: html }
@@ -2086,6 +2087,8 @@ mieles_view:
     - model/mielesTableClass.php
     - model/base/empleadoBaseTableClass.php
     - model/empleadoTableClass.php
+    - model/base/proveedorBaseTableClass.php
+    - model/proveedorTableClass.php
 
 mieles_create:
   url:    /mieles/crear
@@ -2102,6 +2105,8 @@ mieles_edit:
     - model/mielesTableClass.php
     - model/base/empleadoBaseTableClass.php
     - model/empleadoTableClass.php
+    - model/base/proveedorBaseTableClass.php
+    - model/proveedorTableClass.php
 
 
 mieles_update:
